done with implementing masks

--- a/examples/projectors/scratchpad.ipynb
+++ b/examples/projectors/scratchpad.ipynb
@@ -8,8 +8,10 @@
    "source": [
     "import torch\n",
     "import re\n",
-    "from open_flamingo.src.helpers import PerceiverResampler, PerceiverAttention, FeedForward, VisionTokenizer\n",
+    "from open_flamingo.src.helpers import PerceiverResampler, VisionTokenizer\n",
     "from einops_exts import rearrange_many\n",
+    "import torch.nn as nn\n",
+    "torch.set_printoptions(precision=6)\n",
     "# from open_flamingo.src.helpers import Forward, \n",
     "DIR = '/export/share/yutong/xgenmm/llamacpp_wd/siglip_kosmos_phi3_4k_instruct'\n",
     "ckpt = torch.load(DIR + '/xgenmm.projector')"
@@ -17,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +77,15 @@
     "        # Reference: https://pytorch.org/docs/stable/generated/torch.nn.functional.scaled_dot_product_attention.html#torch.nn.functional.scaled_dot_product_attention\n",
     "        if vision_attn_masks is not None:\n",
     "            attn_bias = torch.zeros((q.size(0), 1, 1, q.size(-2), k.size(-2)), dtype=q.dtype, device=q.device)\n",
+    "            print('vision_attn_masks:', vision_attn_masks.shape)\n",
     "            vision_attn_masks = repeat(vision_attn_masks, 'b n -> b 1 1 l n', l=q.size(-2))\n",
+    "            print('vision_attn_masks:', vision_attn_masks.shape)\n",
+    "            print('attn_bias:', attn_bias.shape, 'sim:', sim.shape)\n",
+    "            # return q, k, vision_attn_masks\n",
     "            attn_bias.masked_fill_(vision_attn_masks.logical_not(), float(\"-inf\"))\n",
     "            sim += attn_bias\n",
+    "            \n",
+    "            \n",
     "        # print('remove safe softmax')\n",
     "        sim = sim - sim.amax(dim=-1, keepdim=True).detach()\n",
     "        attn = sim.softmax(dim=-1)\n",
@@ -86,17 +94,25 @@
     "        \n",
     "        out = einsum(\"... i j, ... j d -> ... i d\", attn, v)\n",
     "        out = rearrange(out, \"b h t n d -> b t n (h d)\", h=h)\n",
-    "        return self.to_out(out)\n"
+    "        return self.to_out(out)\n",
+    "\n",
+    "def MyFeedForward(dim, mult=4):\n",
+    "    inner_dim = int(dim * mult)\n",
+    "    return nn.Sequential(\n",
+    "        nn.LayerNorm(dim),\n",
+    "        nn.Linear(dim, inner_dim, bias=False),\n",
+    "        nn.GELU(approximate='tanh'),\n",
+    "        nn.Linear(inner_dim, dim, bias=False),\n",
+    "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "torch.set_printoptions(precision=6)\n",
+    "\n",
     "class MyModel(VisionTokenizer):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -127,7 +143,7 @@
     "                        MyPerceiverAttention(\n",
     "                            dim=dim, dim_head=dim_head, heads=heads\n",
     "                        ),\n",
-    "                        FeedForward(dim=dim, mult=ff_mult),\n",
+    "                        MyFeedForward(dim=dim, mult=ff_mult),\n",
     "                    ]\n",
     "                )\n",
     "            )\n",
@@ -162,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +194,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +215,7 @@
        "(torch.Size([1, 1, 729, 1152]), torch.Size([1, 1, 128, 1152]))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +237,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 729])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vision_attn_masks = torch.zeros((latents.shape[0], 729), dtype=latents.dtype, device=latents.device)\n",
+    "vision_attn_masks[:,0] = 1.0\n",
+    "vision_attn_masks[:,1] = 1.0\n",
+    "vision_attn_masks[:,-1] = 1.0\n",
+    "vision_attn_masks[:,-2] = 1.0\n",
+    "# torch.save(vision_attn_masks, 'test_data/vision_attn_masks.pt')\n",
+    "# vision_attn_masks = torch.cat((vision_attn_masks, \n",
+    "#                                 torch.ones((latents.shape[0], latents.shape[-2]))),\n",
+    "#                                 dim=-1)\n",
+    "vision_attn_masks.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one layer\n",
+      "vision_attn_masks: torch.Size([1, 857])\n",
+      "vision_attn_masks: torch.Size([1, 1, 1, 128, 857])\n",
+      "attn_bias: torch.Size([1, 1, 1, 128, 857]) sim: torch.Size([1, 16, 1, 128, 857])\n",
+      "one layer\n",
+      "vision_attn_masks: torch.Size([1, 857])\n",
+      "vision_attn_masks: torch.Size([1, 1, 1, 128, 857])\n",
+      "attn_bias: torch.Size([1, 1, 1, 128, 857]) sim: torch.Size([1, 16, 1, 128, 857])\n",
+      "one layer\n",
+      "vision_attn_masks: torch.Size([1, 857])\n",
+      "vision_attn_masks: torch.Size([1, 1, 1, 128, 857])\n",
+      "attn_bias: torch.Size([1, 1, 1, 128, 857]) sim: torch.Size([1, 16, 1, 128, 857])\n",
+      "one layer\n",
+      "vision_attn_masks: torch.Size([1, 857])\n",
+      "vision_attn_masks: torch.Size([1, 1, 1, 128, 857])\n",
+      "attn_bias: torch.Size([1, 1, 1, 128, 857]) sim: torch.Size([1, 16, 1, 128, 857])\n",
+      "one layer\n",
+      "vision_attn_masks: torch.Size([1, 857])\n",
+      "vision_attn_masks: torch.Size([1, 1, 1, 128, 857])\n",
+      "attn_bias: torch.Size([1, 1, 1, 128, 857]) sim: torch.Size([1, 16, 1, 128, 857])\n",
+      "one layer\n",
+      "vision_attn_masks: torch.Size([1, 857])\n",
+      "vision_attn_masks: torch.Size([1, 1, 1, 128, 857])\n",
+      "attn_bias: torch.Size([1, 1, 1, 128, 857]) sim: torch.Size([1, 16, 1, 128, 857])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[ 1.138596, -1.629448,  1.893273,  ..., -0.290162,  2.221201,\n",
+       "            0.596550],\n",
+       "          [-0.894259, -0.906887,  2.649132,  ...,  0.111247, -0.299818,\n",
+       "           -0.879028],\n",
+       "          [ 2.036825, -0.609133,  0.790306,  ...,  1.507316,  3.632304,\n",
+       "           -0.416322],\n",
+       "          ...,\n",
+       "          [ 2.022926, -0.675782,  0.941981,  ...,  1.637996,  1.282531,\n",
+       "           -0.666652],\n",
+       "          [ 1.744622,  0.096218,  0.903966,  ...,  0.501223, -0.246479,\n",
+       "           -0.348983],\n",
+       "          [-1.173406, -0.446493,  4.826832,  ...,  0.491566,  3.601248,\n",
+       "            0.467734]]]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latents = projector.latents\n",
+    "latents = repeat(latents, \"n d -> b T n d\", b=b, T=T)\n",
+    "for attn, ff in projector.layers[:7]:\n",
+    "    print('one layer')\n",
+    "    ffn_input = attn(x, latents, vision_attn_masks) + latents\n",
+    "    ffn_output = ff(ffn_input) + ffn_input\n",
+    "    latents = ffn_output\n",
+    "ffn_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[ 0.249325, -0.024104, -0.158862,  ..., -0.676182, -0.779003,\n",
+       "            0.425375],\n",
+       "          [ 0.460110,  0.245056,  0.314648,  ...,  0.082698, -0.829265,\n",
+       "            0.108839],\n",
+       "          [-0.438938, -0.770356,  0.173421,  ..., -0.829115, -0.206850,\n",
+       "            0.299993],\n",
+       "          ...,\n",
+       "          [ 0.110579, -0.816953,  0.583705,  ...,  0.425012, -0.298852,\n",
+       "            0.417250],\n",
+       "          [ 0.589720,  0.786917,  0.508055,  ..., -0.667742, -0.167005,\n",
+       "            0.303853],\n",
+       "          [-0.206662, -0.039490, -0.706598,  ...,  0.058107, -0.270344,\n",
+       "            0.682234]]]], grad_fn=<ViewBackward0>)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "projector.projection(projector.norm(ffn_output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attn, ff = projector.layers[0]\n",
+    "# q, k, vision_attn_masks_new = attn(x, latents, vision_attn_masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attn_bias = torch.zeros((q.size(0), 1, 1, q.size(-2), k.size(-2)), dtype=q.dtype, device=q.device)\n",
+    "# attn_bias.masked_fill_(vision_attn_masks_new.logical_not(), float(\"-inf\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temp = torch.cat((vision_attn_masks, \n",
+    "#                                 torch.ones((latents.shape[0], latents.shape[-2]))),\n",
+    "#                                 dim=-1)\n",
+    "# temp = repeat(temp, 'b n -> b 1 1 l n', l=q.size(-2))\n",
+    "# ((temp - 1) *  float(\"inf\"))[0,0,0,0,:735]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attn_bias[0,0,0,0,:735]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vision_attn_masks_new.logical_not()[0,0,0,0,:735]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +451,7 @@
        "            0.611564]]]], grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +490,7 @@
        "            0.563384]]]], grad_fn=<ViewBackward0>)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,38 +498,6 @@
    "source": [
     "projector.projection(projector.norm(ffn_output))\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[[-1.125840, -1.152360, -0.250579,  ...,  0.702943, -0.667477,\n",
-       "            0.125382],\n",
-       "          [ 0.404710, -0.654932,  0.052124,  ...,  0.409271,  1.328065,\n",
-       "           -1.037527],\n",
-       "          [ 0.224494,  0.217863, -0.925740,  ..., -1.003946, -1.285568,\n",
-       "           -0.940877],\n",
-       "          ...,\n",
-       "          [ 1.961059, -0.128769,  1.245687,  ..., -0.747905, -1.223406,\n",
-       "           -0.803803],\n",
-       "          [ 1.250931,  0.260638, -0.322367,  ...,  1.388404,  0.753187,\n",
-       "            1.057841],\n",
-       "          [-0.822385,  1.267051, -0.065255,  ...,  0.139525, -1.134014,\n",
-       "           -0.970328]]]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
    ]
   },
   {
