add the batched projector

--- a/examples/projectors/scratchpad.ipynb
+++ b/examples/projectors/scratchpad.ipynb
@@ -1,6 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# check attn_bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "def csv_to_tensor(filename, axis=0, stride=128, num_channels=9):\n",
+    "    matrix = np.loadtxt(filename, delimiter=',')\n",
+    "    res = []\n",
+    "    for i in range(num_channels):\n",
+    "        this_channel = matrix[i*stride: (i+1)*stride, :]\n",
+    "        res.append(this_channel)\n",
+    "    tensor = np.stack(res, axis=axis)\n",
+    "    return tensor\n",
+    "\n",
+    "filename = 'attn_bias'\n",
+    "tensor_cpp = csv_to_tensor(f'{filename}.csv')\n",
+    "tensor_torch = torch.load(f'{filename}.pt').numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_cpp[tensor_cpp != 0.0] = -1.0\n",
+    "tensor_torch[tensor_torch != 0.0] = -1.0\n",
+    "np.max(np.abs(tensor_cpp - tensor_torch))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# check model impl"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
